<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2018 Ido Fang Bentov
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">בליך</string>

    <string name="activity_settings">הגדרות</string>
    <string name="activity_about">אודות</string>

    <string name="about_email_click">לחץ כדי לשלוח מייל</string>

    <string name="action_button_refresh">רפרוש</string>
    <string name="action_button_filter_toggle">סינון</string>

    <string name="pref_user_class_group_title">כיתה</string>

    <string name="pref_theme_screen_title">עיצוב</string>
    <string name="pref_theme_screen_key">sub_theme_key</string>

    <string name="pref_theme_category_general_title">צבע - כללי</string>
    <string name="pref_theme_background_title">רקע שחור</string>
    <string name="pref_theme_primary_title">צבע עיקרי</string>
    <string name="pref_theme_accent_title">צבע משני</string>

    <string name="pref_theme_category_schedule_title">צבע - מערכת שעות</string>
    <string name="pref_theme_lesson_canceled_title">צבע ביטולים</string>
    <string name="pref_theme_lesson_changed_title">צבע שינויים</string>
    <string name="pref_theme_lesson_event_title">צבע אירועים</string>
    <string name="pref_theme_lesson_exam_title">צבע מבחנים</string>

    <string name="pref_notification_category_title">התראות</string>
    <string name="pref_notification_toggle_title">התראות</string>

    <string name="pref_notification_sound_title">צליל</string>

    <string name="pref_filter_category_title">סינון</string>
    <string name="pref_filter_toggle_title">סינון</string>
    <string name="pref_filter_select_title">בחירת מורים</string>

    <string name="dialog_class_picker_title">בחירת כיתה</string>
    <string name="dialog_okay">אישור</string>
    <string name="dialog_try_again">נסה שוב</string>
    <string name="dialog_cancel">ביטול</string>

    <string name="dialog_changelog_title">שינויים וחידושים</string>

    <string name="dialog_teacher_filter_title">סינון</string>
    <string name="dialog_teacher_filter_description">בחר את כל המורים שמלמדים אותך.\n<b>הערה:</b> יש להשתמש באפשרות זו בזהירות כיוון שהיא עלולה להוביל להסתרת שיעורים של מורים שבטעות לא נבחרו.</string>

    <string name="dialog_exam_reminder_title">תזכורת למבחן</string>
    <string name="dialog_exam_reminder_one_day">יום לפני</string>
    <string name="dialog_exam_reminder_three_days">שלושה ימים לפני</string>
    <string name="dialog_exam_reminder_week">שבוע לפני</string>

    <string name="dialog_fetch_no_connection_title">אין חיבור לאינטרנט</string>
    <string name="dialog_fetch_no_connection_message">אין אפשרות לעדכן את הנתונים כיוון שאין חיבור לאינטרנט.</string>
    <string name="dialog_fetch_empty_html_title">אין גישה לאתר</string>
    <string name="dialog_fetch_empty_html_message">אירעה שגיאה בהשגת המידע מאתר בליך.</string>
    <string name="dialog_fetch_unsuccessful_title">שגיאה</string>
    <string name="dialog_fetch_unsuccessful_message">אירעה שגיאה בהשגת המידע מאתר בליך.</string>
    <string name="dialog_fetch_class_unsuccessful_message">אין אפשרות לשנות את הכיתה עד שיהיה חיבור לאינטרנט</string>

    <string name="drawer_schedule_title">מערכת שעות</string>
    <string name="drawer_exams_title">מבחנים</string>
    <string name="drawer_settings_title">הגדרות</string>

    <string name="drawer_open_desc">פתוח</string>
    <string name="drawer_close_desc">סגור</string>


    <string name="notification_channel_schedule_id">schedule_channel</string>
    <string name="notification_channel_schedule_name">Schedule</string>
    <string name="notification_channel_schedule_description">Notify about upcoming changes in schedule</string>

    <string name="notification_update_title">מערכת שעות</string>

    <string name="contentdes_drawer_logo">לוגו</string>

    <string name="schedule_blank_page_message_no_data">אין מידע על היום הקרוב</string>
    <string name="exam_blank_page_message_no_data">אין מידע על מבחנים קרובים</string>

    <string name="toast_filter_not_setup">אנא בחר מורים בהגדרות כדי לאפשר סינון</string>
    <string name="about_principle">מנהלת בית הספר</string>
    <string name="about_principle_name">זהבית גולדמן</string>
    <string name="about_it">מנהלי רשתות</string>
    <string name="about_it_name">עמי ארנוזון ועמוס שאול</string>
    <string name="about_dev">צוות פיתוח</string>

    <string name="about_dev_android_name"><b>אנדרואיד: </b>עידו פנג בנטוב</string>
    <string name="about_dev_ios_name"><b>אייפון: </b>בן רז ואתגר שמואלי</string>
    <string name="about_email">מייל לתמיכה</string>
    <string name="action_debug_notification">Debug Notification</string>

</resources>