<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main"
        android:checkableBehavior="single"
        android:orderInCategory="1">
        <item
            android:id="@+id/schedule"
            android:icon="@drawable/ic_timetable_grey600_24dp"
            android:title="@string/drawer_schedule_title"/>

        <item
            android:id="@+id/exams"
            android:icon="@drawable/ic_clipboard_text"
            android:title="@string/drawer_exams_title"/>
    </group>
    <group
        android:id="@+id/system"
        android:checkableBehavior="single"
        android:orderInCategory="2">
        <item
            android:id="@+id/settings"
            android:checkable="false"
            android:icon="@drawable/ic_settings_grey600_24dp"
            android:title="@string/drawer_settings_title"/>
    </group>
</menu>