<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Written by Ido Fang Bentov
  ~ Copyright (C) Blich - All Rights Reserved
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.ScheduleFragment">

    <item
        android:id="@+id/action_filter_toggle"
        android:title="@string/action_button_filter_toggle"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/action_button_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_debug_notification"
        android:title="@string/action_debug_notification"
        android:icon="@drawable/ic_notifications_white_24dp"
        app:showAsAction="ifRoom"
        android:visible="@bool/debug" />
</menu>