<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2018 Ido Fang Bentov
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main"
        android:checkableBehavior="single"
        android:orderInCategory="1">
        <item
            android:id="@+id/schedule"
            android:icon="@drawable/ic_timetable_white_24dp"
            android:title="@string/drawer_schedule_title"/>

        <item
            android:id="@+id/exams"
            android:icon="@drawable/ic_assignment_white_24dp"
            android:title="@string/drawer_exams_title"/>
    </group>
    <group
        android:id="@+id/system"
        android:checkableBehavior="single"
        android:orderInCategory="2">

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info_white_24dp"
            android:checkable="false"
            android:title="@string/activity_about"/>

        <item
            android:id="@+id/settings"
            android:checkable="false"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/drawer_settings_title"/>
    </group>
</menu>