<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/reminder_one_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_exam_reminder_one_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminder_time" />

    <CheckBox
        android:id="@+id/reminder_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_exam_reminder_three_days"
        app:layout_constraintStart_toStartOf="@+id/reminder_one_day"
        app:layout_constraintTop_toBottomOf="@+id/reminder_one_day" />

    <CheckBox
        android:id="@+id/reminder_three_days2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_exam_reminder_week"
        app:layout_constraintStart_toStartOf="@+id/reminder_one_day"
        app:layout_constraintTop_toBottomOf="@+id/reminder_week" />

    <Button
        android:id="@+id/reminder_time"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="text_color|primary_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="14:00" />
</android.support.constraint.ConstraintLayout>